--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,10 @@
     "utf8": "disable"
   },
   "Lua.workspace.library": [
-    "~/.vscode/extensions/ketho.wow-api-0.18.1/Annotations"
+    "~\\.vscode\\extensions\\ketho.wow-api-0.18.1\\Annotations"
   ],
   "Lua.diagnostics.globals": [
-    "RANGE_DAMAGE_COMBATLOG_TOOLTIP"
+    "RANGE_DAMAGE_COMBATLOG_TOOLTIP",
+    "PARTY"
   ]
 }
