--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,14 @@
     "utf8": "disable"
   },
   "Lua.workspace.library": [
-    "~/.vscode/extensions/ketho.wow-api-0.18.1/Annotations"
+    "~/.vscode/extensions/ketho.wow-api-0.18.2/Annotations"
   ],
   "Lua.diagnostics.globals": [
     "RANGE_DAMAGE_COMBATLOG_TOOLTIP",
     "PARTY",
     "TooltipDataProcessor",
     "GameTooltipTextLeft3",
-    "GameTooltipTextLeft4"
+    "GameTooltipTextLeft4",
+    "FACTION_BAR_COLORS"
   ]
 }
