--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "utf8": "disable"
   },
   "Lua.workspace.library": [
-    "~\\.vscode\\extensions\\ketho.wow-api-0.18.2\\Annotations"
+    "~/.vscode/extensions/ketho.wow-api-0.18.2/Annotations"
   ],
   "Lua.diagnostics.globals": [
     "RANGE_DAMAGE_COMBATLOG_TOOLTIP",
@@ -33,6 +33,10 @@
     "QUESTS_LABEL",
     "TALENT",
     "ACHIEVEMENTS",
-    "CURRENCY"
+    "CURRENCY",
+    "ChatFrame_AddMessageEventFilter",
+    "OPTIONS",
+    "PLAYER_LEVEL_UP",
+    "PlayerFrame"
   ]
 }
