--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "base64-js": "^1.5.1",
+    "convert-svg-to-png": "^0.6.4",
+    "luaparse": "^0.3.1",
     "node-weakauras-parser": "^3.2.3",
     "zlibjs": "^0.3.1"
   }
